src/index.css
body {
  background: linear-gradient(
    178deg,
    white 0%,
    white 50%,
    black 50%,
    black 100%
  );
  font-family: sans-serif;
  margin: 0;
  padding: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
  display: flex;
  flex: 1;
  flex-direction: column;
}

h1::before {
  content: attr(data-heading);
  position: absolute;
  color: black;
  height: 50%;
  overflow: hidden;
  text-align: center;
  transform: translate(-10px);
  transition: transform ease-in 1s;
}

h1:hover:before {
  transform: translate(0px);
}

h1 {
  position: absolute;
  margin: 0;
  width: auto;
  color: white;
  white-space: nowrap;
  font-size: 32pt;
  transform: rotate(-2deg);
}

h1:hover {
  cursor: pointer;
}

.container {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

